# SingletonDP

./: CMakeLists.txt  README.md  SingletonDP.cpp  SingletonDP.h
include/: creation_policy.hpp  lifetime_policy.hpp  singleton.hpp  threading_policy.hpp
src/: main.cpp
tests/: test.cpp
